--- a/install
+++ b/install
@@ -13,3 +13,15 @@ done
 mkdir $HOME/tools
 pkg install git -y
 pkg install figlet
+clear
+echo -e "\e[31m";figlet -f digital Installation Done
+sleep 0.3
+clear
+echo -e "\e[32m";figlet -f digital Installation Done
+sleep 0.3
+clear
+echo -e "\e[33m";figlet -f digital Installation Done
+sleep 0.3
+clear
+echo -e "\e[34m";figlet -f digital Installation Done
+sleep 0.3
